--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>SECURITY RESEARCHER - nooobiemi</h1>
-        <p>THIS IS A TEST WEBSITE</p>
-        <p class="note">Created for testing and experimentation purposes.</p>
+        <h1>WEB SECURITY RESEARCHER - nooobiemi</h1>
+        <h3>THIS IS A TEST WEBSITE</h3>
+        <p class="note">Created for testing and experimentation purposes only.</p>
     </div>
 </body>
 </html>
